--- a/chrome_ext/manifest.json
+++ b/chrome_ext/manifest.json
@@ -6,14 +6,15 @@
   "version": "1.0",
 
   "permissions": [
-    "http://aang.in/",
+    "http://aang.in/"
   ],
   "content_scripts": [
-      "matches": ["*"],
+      {
+      "matches": ["http://*/*" ],
       "js":["urlshorten.js"],
       "run_at":"document_end"
-
-  ]
+    }
+  ],
   "browser_action": {
     "default_icon": "icon.png",
     "default_popup": "popup.html"
