--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -3,8 +3,9 @@
       package="com.emofeedback"
       android:versionCode="1"
       android:versionName="1.0">
+  <uses-permission android:name="android.permission.INTERNET"/>
     <application android:label="@string/app_name" >
-        <activity android:name="com.emofeedback.UrlShortener"
+        <activity android:name="UrlShortener"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
