--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -4,7 +4,7 @@
       android:versionCode="1"
       android:versionName="1.0">
   <uses-permission android:name="android.permission.INTERNET"/>
-    <application android:label="@string/app_name" >
+  <application android:icon="@drawable/urlshortener" android:label="@string/app_name" >
         <activity android:name="UrlShortener"
                   android:label="@string/app_name">
             <intent-filter>
